# Polygeist_vis

./: CMakeLists.txt
include/: CMakeLists.txt
include/visualgo/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  VisualgoOps.td
include/visualgo/Passes/: CMakeLists.txt  Passes.h  Passes.td
lib/visualgo/: CMakeLists.txt  Dialect.cpp  Ops.cpp
lib/visualgo/Passes/: CMakeLists.txt  ConvertVisualgoToLLVM.cpp  PassDetails.h
test/visualgo/: a.out  dump.cpp  dump.h  dump.ll  run.sh  test.ll  testDump.cpp  testDump.ll
tools/cgeist/: CMakeLists.txt  driver.cc
tools/cgeist/Lib/: CGCall.cc  ValueCategory.cc  clang-mlir.cc  clang-mlir.h
